# ESP32-EDGEIOT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  iap.py  partitions.csv  sdkconfig  sdkconfig.old
STM32-IAP/STM32-IAP-BootLoader/: .cproject  .project  IAP_README.md  STM32-IAP-BootLoader.ioc  STM32-IAP-BootLoader.launch  app_test_guide.txt  chat.md
STM32-IAP/STM32-IAP-BootLoader/Core/Inc/: main.h
STM32-IAP/STM32-IAP-BootLoader/Core/Src/: gpio.c  main.c  system_stm32f1xx.c
STM32-IAP/STM32-IAP-FREERTOS/: .cproject  .mxproject  .project  STM32-IAP-FREERTOS Debug.launch  STM32-IAP-FREERTOS.ioc  STM32F103C8TX_FLASH.ld
STM32-IAP/STM32-IAP-FREERTOS/Core/Inc/: main.h
STM32-IAP/STM32-IAP-FREERTOS/Core/Src/: freertos.c  main.c  system_stm32f1xx.c
STM32-IAP/STM32-IAP-FREERTOS/Drivers/KEY_Driver/: bsp_key.c  bsp_key.h
STM32-IAP/STM32-IAP-FREERTOS/Drivers/LED_Driver/: bsp_led.c  bsp_led.h
components/aliyun_mqtt/: CMakeLists.txt  ChangeLog.md
components/aliyun_mqtt/portfiles/aiot_port/: freertos_port.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  station_example_main.c
main/bsp_aliyun_mqtt/: aliyun_mqtt.c  aliyun_mqtt.h
main/bsp_bluetooth/: bsp_nimble_led.c  bsp_nimble_led.h  common.h  gap.c  gatt_svc.c  led.c
main/bsp_iap/: stm32_iap.c  stm32_iap.h
main/bsp_littlefs/: littlefs_mount.c  littlefs_mount.h
main/bsp_uart/: uart_init.c  uart_init.h
main/bsp_usb/: usb_cdc.c  usb_cdc.h
main/bsp_wifi_server/: file_server.c  file_server.h  wifi_init.c  wifi_init.h
